<resources>
    <string name="app_name">True Leap</string>

    <string name="module_assignment">Assignments</string>
    <string name="module_quiz">Quiz</string>
    <string name="module_classnote">Class Notes</string>
    <string name="module_gradebook">Grade Book</string>
    <string name="module_message">Chat History</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="str_uploaded_on">Uploaded On</string>
    <string name="Class_title">Message</string>
    <string name="date_time">15 Aug at 9.15AM </string>
    <string name="view_details">View Details</string>
    <string name="std_class">Student Grade </string>
    <string name="std_section">Student Section </string>

    <string name="action_notification">Notifications </string>

    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_error">Invalid Email</string>
    <string name="required_field">Required</string>
    <string name="action_change_lang">Change Language</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="auto_upload_doc">Auto upload documents</string>
    <string name="auto_download_doc">Auto download documents</string>

    <string name="download_permission_explaination">File Download - Write to external storage permission</string>
    <string name="download_permission_grant">Grant Permission</string>

    <string name="download">Download</string>
    <string name="open">Open Document</string>
    <string name="upload">Upload</string>
    <string name="take_photo">Take Photo</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="add_document">Add Document</string>
    <string name="auto_download">Auto Download</string>
    <string name="auto_upload">Auto Upload</string>

    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="select_language">Select Language</string>

    <string name="confirm">Confirm</string>
    <string name="logout_msg">Do you really want to exit?</string>
    <string name="exit_msg">Do you really want to logout?</string>

    <string name="downloaded_successfully">Downloaded Successfully</string>
    <string name="uploaded_successfully">"Uploaded Successfully</string>
    <string name="select_one_file">Please select one file to upload !</string>
    <string name="submit_assignment">Submit Assignment</string>
    <string name="assignment_not_submitted">Assignment not Submitted yet !</string>
    <string name="assignment_submitted">Assignment Already Submitted !</string>

    <!--- Grade Book -->
    <string name="grade_type">Grade Type</string>
    <string name="grade_weight">Grade Weight</string>
    <string name="grade_name">Grade Name</string>
    <string name="compulsary">Compulsary</string>
    <string name="compulsary_pass_mark"> Compulsary Pass Mark</string>
    <string name="assessment_date">Assessment Date</string>
    <string name="out_of">Out of</string>
    <string name="best_out_of">Best Out of</string>
    <string name="part_of_midterm_grade"> Part of Midterm Grade</string>

    <string name="search">Search</string>
    <string name="due_on">Due on</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_notification">New Notifications</string>

    <string name="close">CLose</string>
    <string name="message">Message</string>

    <!---  Offline Login -->
    <string name="ConfigureOfflinelogin">Set Your Secret Question</string>
    <string name="Offlinelogin">Offline Login</string>
    <string name="answer">Answer</string>
    <string name="confirm_answer">Confirm Answer</string>
    <string name="set">Confirm</string>
    <string name="err_empty_answer">Enter Your Answer</string>
    <string name="err_empty_c_answer">Enter Confirm Answer</string>
    <string name="err_invalid_answer_confirm">Confirm Answer doesnot matched.</string>
    <string name="session_timeout">Session Timeout</string>
    <string name="go_to_login">Login Using Internet</string>
    <string name="access_offline">Access Offline</string>

    <!---  Messaging -->
    <string name="send_notification">Send Notification</string>
    <string name="action_send_notification">Send Notification</string>

    <string name="no_classes_found">No Classes found !</string>

    <string name="upload_failed">Upload failed!</string>
    <string name="title_activity_select_country">SelectCountry</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>


</resources>