<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gradebook.GradebookActivity">

    <LinearLayout
            android:id="@+id/header_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <include layout="@layout/appbar_layout" />

            <TextView
                android:id="@+id/classDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/text_color"
                android:textSize="@dimen/textsize_m"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/margin_10dp"
                android:layout_marginVertical="@dimen/margin_10dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/student_class"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="@dimen/margin_10dp"
                    android:gravity="center"
                    android:text="@string/std_class"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/textsize_m"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/student_section"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/std_section"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/textsize_m"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/suject_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="Subject name"
                android:textColor="@color/text_color"
                android:textSize="@dimen/textsize_m"
                android:textStyle="bold" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/gradbook_header"
        android:layout_marginHorizontal="@dimen/spacing_xl"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/header_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="9"
        android:paddingVertical="@dimen/spacing_s"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/spacing_xs"
            android:textSize="@dimen/textsize_xxs"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/grade_type"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/spacing_xs"
            android:textSize="@dimen/textsize_xxs"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/grade_weight"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:paddingHorizontal="@dimen/spacing_xs"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="@dimen/textsize_xxs"
            android:textStyle="bold"
            android:text="@string/grade_name"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/spacing_xs"
            android:textSize="@dimen/textsize_xxs"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/compulsary"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:paddingHorizontal="@dimen/spacing_xs"
            android:textSize="@dimen/textsize_xxs"
            android:textStyle="bold"
            android:text="@string/compulsary_pass_mark"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:paddingHorizontal="@dimen/spacing_xs"
            android:textSize="@dimen/textsize_xxs"
            android:textStyle="bold"
            android:text="@string/assessment_date"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/spacing_xs"
            android:textSize="@dimen/textsize_xxs"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/out_of"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/spacing_xs"
            android:textSize="@dimen/textsize_xxs"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/best_out_of"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/spacing_xs"
            android:textSize="@dimen/textsize_xxs"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/part_of_midterm_grade"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/spacing_xl"
            app:layout_constraintTop_toBottomOf="@+id/gradbook_header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/gradebook_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>