<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/appbar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/spacing_xl"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/changeLanguage"
                android:layout_marginVertical="@dimen/spacing_xl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_xs"
                    android:src="@drawable/ic_baseline_language_24"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:textSize="@dimen/textsize_m"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color"
                    android:text="@string/action_change_lang"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/autoDownload"
                android:textColor="@color/text_color"
                android:textSize="@dimen/textsize_m"
                android:text="@string/auto_download"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/autoUpload"
                android:textColor="@color/text_color"
                android:text="@string/auto_upload"/>
        </LinearLayout>
    </LinearLayout>
</layout>