<?xml version="1.0" encoding="utf-8"?>
<layout>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".dialogFragment.sessionTimeoutFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingVertical="@dimen/spacing_m"
                    android:text="@string/session_timeout"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_xl" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingVertical="@dimen/spacing_xl"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/offline_login"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="@dimen/spacing_l"
                    android:text="@string/access_offline"
                    android:layout_height="wrap_content"></com.google.android.material.button.MaterialButton>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:text="@string/go_to_login"
                    android:layout_height="wrap_content"></com.google.android.material.button.MaterialButton>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</layout>
