<?xml version="1.0" encoding="utf-8"?>
<layout>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dialogFragment.LanguageDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingVertical="@dimen/spacing_m"
                android:text="@string/select_language"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_xl" />
        </LinearLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/language"
            app:singleSelection="true"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            app:checkedChip="@id/english"
            android:layout_marginVertical="@dimen/textsize_l"
            android:layout_height="wrap_content">
            <com.google.android.material.chip.Chip
                android:id="@+id/english"
                android:layout_width="match_parent"
                android:text="@string/english"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:textAlignment="center"
                android:layout_height="wrap_content">
            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/hindi"
                android:text="@string/hindi"
                android:textAlignment="center"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.google.android.material.chip.Chip>

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>
</FrameLayout>
</layout>