<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SetupOfflineLoginActivity"
    android:id="@+id/rootlayout">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/login_box"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_xl"
        android:layout_marginVertical="@dimen/spacing_m"
        android:paddingTop="@dimen/spacing_xl"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="15dp"
        card_view:contentPadding="@dimen/spacing_xl"
        card_view:cardElevation="18dp">

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/ConfigureOfflinelogin"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textsize_xl"
                android:textStyle="bold" />

             <androidx.appcompat.widget.AppCompatSpinner
                 android:id="@+id/selectquestions"
                 android:background="@drawable/input_border_grey"
                 android:layout_width="match_parent"
                 android:minHeight="40dp"
                 android:layout_height="wrap_content">
             </androidx.appcompat.widget.AppCompatSpinner>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/answer"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/answer"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color_grey"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/conf_answer"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/confirm_answer"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color_grey"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/set_secret_question"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/loginbutton_selector"
                android:padding="3dp"
                android:text="@string/set"
                android:textColor="@color/white"
                app:cornerRadius="8dp"
                android:textSize="@dimen/textsize_m"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>
</layout>


