<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/margin_10dp"
    android:layout_marginVertical="@dimen/margin_10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.studentsubject.ClassmaterialtypeFragment">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:id="@+id/header_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/student_class"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/std_class"
                android:textStyle="bold"
                android:layout_marginRight="@dimen/margin_10dp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/textsize_m" />

            <TextView
                android:id="@+id/student_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/std_section"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:textSize="@dimen/textsize_m" />

        </LinearLayout>


        <TextView
            android:id="@+id/suject_name"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Subject name"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:textSize="@dimen/textsize_m" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@id/header_info"
        android:id="@+id/action_assignment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/colorAccent"
        android:layout_marginHorizontal="@dimen/spacing_s"
        android:layout_marginTop="@dimen/spacing_xl"
        app:cardCornerRadius="20dp"
        app:contentPadding="@dimen/spacing_xl"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/margin_5dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/module_assignment"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_xxl" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="2dp"
                android:background="@color/grey" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@+id/action_assignment"
        android:id="@+id/action_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/colorAccent"
        android:layout_marginHorizontal="@dimen/spacing_s"
        android:layout_marginTop="@dimen/spacing_xl"
        app:cardCornerRadius="20dp"
        app:contentPadding="@dimen/spacing_xl"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/margin_5dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/module_quiz"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_xxl" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="2dp"
                android:background="@color/grey" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@+id/action_quiz"
        android:id="@+id/action_classnote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/colorAccent"
        android:layout_marginHorizontal="@dimen/spacing_s"
        android:layout_marginTop="@dimen/spacing_xl"
        app:cardCornerRadius="20dp"
        app:contentPadding="@dimen/spacing_xl"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/margin_5dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/module_classnote"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_xxl" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="2dp"
                android:background="@color/grey" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@+id/action_classnote"
        android:id="@+id/action_gradebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/colorAccent"
        android:layout_marginHorizontal="@dimen/spacing_s"
        android:layout_marginTop="@dimen/spacing_xl"
        app:cardCornerRadius="20dp"
        app:contentPadding="@dimen/spacing_xl"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/margin_5dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/module_gradebook"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_xxl" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="2dp"
                android:background="@color/grey" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@+id/action_gradebook"
        android:id="@+id/action_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/colorAccent"
        android:layout_marginHorizontal="@dimen/spacing_s"
        android:layout_marginTop="@dimen/spacing_xl"
        app:cardCornerRadius="20dp"
        app:contentPadding="@dimen/spacing_xl"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/margin_5dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/module_message"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_xxl" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="2dp"
                android:background="@color/grey" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>